Adding initial fragment caching.
Each row will be cached based on a combination of the id of the
submission, the submission's timestamp, and the number of comments that
the submission has.

--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -12,12 +12,14 @@
 
   <tbody>
     <% @submissions.each do |submission| %>
-      <tr>
-        <td><%= link_to(submission.title, submission.url) %></td>
-        <td><%= submission.url %></td>
-        <td><%= submission.community.name %></td>
-        <td><%= link_to "#{submission.comments.size} comments", submission, class: 'btn btn-primary btn-xs'  %></td>
-      </tr>
+      <% cache(cache_key_for_submission_row(submission)) do %>
+        <tr>
+          <td><%= link_to(submission.title, submission.url) %></td>
+          <td><%= submission.url %></td>
+          <td><%= submission.community.name %></td>
+          <td><%= link_to "#{submission.comments.size} comments", submission, class: 'btn btn-primary btn-xs'  %></td>
+        </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
