--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -1,30 +1,32 @@
-<h3>Submissions</h3>
+<% cache(cache_key_for_submission_table) do %>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Url</th>
-      <th>Community</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <h3>Submissions</h3>
 
-  <tbody>
-    <% @submissions.each do |submission| %>
-      <% cache(cache_key_for_submission_row(submission)) do %>
-        <tr>
-          <td><%= link_to(submission.title, submission.url) %></td>
-          <td><%= submission.url %></td>
-          <td><%= submission.community.name %></td>
-          <td><%= link_to "#{submission.comments.size} comments", submission, class: 'btn btn-primary btn-xs'  %></td>
-        </tr>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Url</th>
+        <th>Community</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @submissions.each do |submission| %>
+        <% cache(cache_key_for_submission_row(submission)) do %>
+          <tr>
+            <td><%= link_to(submission.title, submission.url) %></td>
+            <td><%= submission.url %></td>
+            <td><%= submission.community.name %></td>
+            <td><%= link_to "#{submission.comments.size} comments", submission, class: 'btn btn-primary btn-xs'  %></td>
+          </tr>
+        <% end %>
       <% end %>
-    <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
 
-<br>
-<%= link_to 'New Submission', new_submission_path, class: 'btn btn-primary' %>
-<%= link_to 'New Community', new_community_path, class: 'btn btn-primary' %>
-
+  <br>
+  <%= link_to 'New Submission', new_submission_path, class: 'btn btn-primary' %>
+  <%= link_to 'New Community', new_community_path, class: 'btn btn-primary' %>
+<% end %>
