--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,7 +12,7 @@
       <dl>
         <dt><%= product.title %></dt>
         <!-- <dd><%= truncate(strip_tags(product.description), length: 80) %></dd> -->
-        <dd><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="<%= product.description %>"></iframe></dd>
+        <dd><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="<%= product.image_url %>"></iframe></dd>
       </dl>
     </td>
     <td class="list_actions">
