--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,7 @@
  */
 
 /* START_HIGHLIGHT */
+/*
 #banner {
   background: #9c9;
   padding: 10px;
@@ -27,6 +28,7 @@
     float: left;
   }
 }
+*/
 
 #notice {
   color: #000 !important;
@@ -36,6 +38,7 @@
   background-color: #f0f0f0;
   font: bold smaller sans-serif;
 }
+
 
 #columns {
   background: #141;
