--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="#">Home</a></li>
+              <li><a href=<%=home_url%>>Home</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
@@ -67,11 +67,12 @@
     <!-- END:hidden_div -->
       <% if session[:user_id] %>
         <ul class="nav nav-sidebar">
-          <li><%= link_to 'Orders',   orders_path   %></li>
-          <li><%= link_to 'Products', products_path %></li>
+          <li><%= link_to 'Discoveries', musics_path %></li>
           <li><%= link_to 'Users',    users_path    %></li>
-        </ul>
         <!--<%= button_to 'Logout', logout_path, method: :delete   %>-->
+      <% else %>
+          <li><%= link_to 'Log In',    login_url    %></li>
+        </ul>        
       <% end %>
 
     </div>
