--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,54 @@
 <h1>New user</h1>
 
-<%= render 'form' %>
+<div class="depot_form">
+<br />
+<%= form_for @user do |f| %>
+  <% if @user.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@user.errors.count, "error") %>
+        prohibited this user from being saved:</h2>
+      <ul>
+      <% @user.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <fieldset>
+  <div class="form-signin">
+  <legend>Enter User Details</legend>
+
+  <div class="field">
+    <div><%= f.label :name, 'Name:' %></div>
+    <div><%= f.text_field :name, size: 40, :class => "form-control" %></div>
+  </div>
+
+ 
+
+
+  <div class="field">
+    <div><%= f.label :password, 'Password:' %></div>
+    <div><%= f.password_field :password, size: 40, :class => "form-control" %></div>
+  </div>
+
+  
+  <div class="field">
+    <%= f.label :password_confirmation, 'Confirm:' %>
+    <%= f.password_field :password_confirmation, size: 40, :class => "form-control" %>
+  </div>
+
+  <div class="actions btn btn-submit">
+    <%= f.submit %>
+  </div>
+
+  <%= link_to 'Back', login_url %>
+
+
+</div>
+  </fieldset>
+<% end %>
+</div>
+
 
 
