--- a/app/views/users/friends.html.erb
+++ b/app/views/users/friends.html.erb
@@ -15,7 +15,8 @@ MyFriends:
 
 <% @friends.each do |friend| %>
       <p>  
-      <%= friend.name %> 
+       <%= image_tag(friend.picurl) %> 
+       <%= friend.name %> 
       </p>
  <% end %>
 
