--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,7 @@
 <div class="depot_form">
 <br />
-<%= form_for @user do |f| %>
+<%= form_for(@user , :html => { :multipart => true 
+}) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %>
@@ -51,6 +52,12 @@
   <div class="field">
     <%= f.label :password_confirmation, 'Confirm:' %>
     <%= f.password_field :password_confirmation, size: 40, :class => "form-control" %>
+  </div>
+
+
+  <div class="field">
+    <%= f.label :image %><br />
+    <%= f.file_field :image, :class => "form-control" %>
   </div>
 
   <div class="actions btn btn-submit">
