--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-<%= image_tag(@user.picurl) %>
+<%= image_tag @user.image.url(:small) %>
 </p>
 
 <p>
@@ -32,6 +32,8 @@
 <p>
 <%= link_to 'MyTimeline', mytimeline_path(@user) %> 
 </p>
+
+
 
 
 
