--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,6 +33,35 @@
 <%= link_to 'MyTimeline', mytimeline_path(@user) %> 
 </p>
 
+ <% unless @current_user == @user %>
+        <%= link_to "Add Friend", friendships_path(:friended_id => @user.id), :method => :post %>
+    <% end %>
+
+    <h4>Friends</h4>
+    <ul>
+        <% @user.friends.each do |friend| %>
+        <li>
+          <%= friend.name %> 
+          <% if @current_user == @user %>
+            <%= link_to "Remove", friendship_path(:friended_id => friend.id), :method => :delete %>
+          <% end %>
+        </li>
+      <% end %>
+    </ul>
+
+    <% if @current_user == @user %>
+        <h4>Friend Requests</h4>
+        <ul>
+            <% @user.requests_from.each do |request| %>
+            <li>
+              <%= request.name %> 
+              <%= link_to "Accept", friendship_path(:friended_id => request.id), :method => :put %> 
+              <%= link_to "Decline", friendship_path(:friended_id => request.id), :method => :delete %>
+            </li>
+          <% end %>
+        </ul>
+    <% end %>
+
 
 
 
