--- a/app/views/users/friends.html.erb
+++ b/app/views/users/friends.html.erb
@@ -1,7 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-<%= image_tag(@user.picurl) %>
+
+<%= image_tag @user.image.url(:small) %>
 </p>
 
 <p>
@@ -15,7 +16,7 @@ MyFriends:
 
 <% @friends.each do |friend| %>
       <p>  
-       <%= link_to image_tag(friend.picurl), friend %> 
+       <%= link_to (image_tag friend.image.url(:small)), friend %> 
       </p>
       <p>
       	<%= link_to friend.name, friend %> 
