--- a/app/views/users/friends.html.erb
+++ b/app/views/users/friends.html.erb
@@ -16,7 +16,7 @@
 <% @friends.each do |friend| %>
 	<tr>
 		<td class='list_description'>
-    	<%= link_to (image_tag friend.image.url(:small)), friend %> 
+    	<%= link_to (image_tag friend.image.url(:small), :class => "profile-img"), friend %> 
     	<%= link_to friend.name, friend %> 
     	</td>
     </tr>
