--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-<%= image_tag @user.image.url(:small) %>
+<%= image_tag(@user.image.url(:small), :class => "profile-img") %>
 </p>
 
 <p>
