--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Discover musics</h1>
+<h1>Discover music</h1>
 <br />
 <button class="btn btn-default"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><%= link_to 'New Music', new_music_path %></button>
 
@@ -10,10 +10,10 @@
   <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
     <td>
       <div>
-      <%= image_tag(music.user(music.uid).image.url(:small), :class => "profile-img", :alt=>"http://osinskiartur.pl/img/news/unknow.png") %>
+      <%= image_tag(music.user.image.url(:small), :class => "profile-img", :alt=>"http://osinskiartur.pl/img/news/unknow.png") %>
       </div>
       <div>
-      <%= link_to music.uid, user_path(music.uid) %>
+      <%= link_to music.user.name, user_path(music.uid) %>
       </div>
     </td>
     <td class="list_description">
@@ -26,8 +26,8 @@
       <ul class="music-item">
         <li> <%= music.comment %> </li>
         <li> <%= music.hashtag %> </li>
+        <li> <p><iframe frameborder="no" border="0" width=320 height=50 src="<%= music.link %>"></iframe></p></li>
         <li style="color:grey"><%= music.created_at %></li>
-        <li> <p><iframe frameborder="no" border="0" width=320 height=80 src="<%= music.link %>"></iframe></p></li>
       </ul>
     </td>
     <td class="list_actions">
