--- a/app/views/users/mytimeline.html.erb
+++ b/app/views/users/mytimeline.html.erb
@@ -19,9 +19,10 @@
         </td>
         <td class="list_description">
           <dl>
-            <dt><%= music.comment %> <%= music.hashtag %></dt>        
-            <dt id="title">&nbsp&nbsp&nbsp<%= music.title %> - <%= music.artist %></dt>
+            <dt><%= music.comment %> <br><%= music.hashtag %></dt>        
+            <!-- <dt id="title">&nbsp&nbsp&nbsp<%= music.title %> - <%= music.artist %></dt> -->
             <dd><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=320 height=50 src="<%= music.link %>"></iframe></dd>
+            <dd style="color:grey"><%= music.created_at %></dd>
           </dl>
         </td>
         <td class="list_actions">
