--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li><a href=<%=home_url%>>Home</a></li>
-              <li><a href="#">About</a></li>
+              <li><a href="#">Search</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
             <% if session[:user_id] %>
