--- a/app/views/users/friends.html.erb
+++ b/app/views/users/friends.html.erb
@@ -25,7 +25,7 @@
         <ul>
             <% @user.requests_from.each do |request| %>
             <li>
-              <%= link_to request.name, user_path(request.name) %> 
+              <%= link_to request.name, user_path(request.id) %> 
               <%= link_to "Accept", friendship_path(:friended_id => request.id), :method => :put %> 
               <%= link_to "Decline", friendship_path(:friended_id => request.id), :method => :delete %>
             </li>
