--- a/app/views/users/mytimeline.html.erb
+++ b/app/views/users/mytimeline.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<div class="homepage-header">
+<div class="middle-page">
   <div>
   <%= image_tag(@user.image.url(:small), :class => "profile-img") %> 
   </div>
