--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,18 +59,33 @@
 
       <% if session[:user_id] %>
         <ul class="nav nav-sidebar">
-          <li><%= link_to 'Discoveries', musics_path %></li>
-          <!-- <li><%= link_to 'Users',    users_path    %></li> -->
-          <li><%= link_to 'Homepage',    homepage_path(session[:user_id])    %></li>
-          <li><%= link_to 'My Timeline',    mytimeline_path(session[:user_id])    %></li>
-          <li><%= link_to 'My Friends',    friends_path(session[:user_id]) %></li>
-        <!--<%= button_to 'Logout', logout_path, method: :delete   %>-->
+        <li>
+          <%= link_to musics_path  do %>
+          <i class="glyphicon glyphicon-music">&nbsp;Discovery</i>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to homepage_path(session[:user_id])  do %>
+          <i class="glyphicon glyphicon-user">&nbsp;Profile</i>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to mytimeline_path(session[:user_id])   do %>
+          <i class="glyphicon glyphicon-sort-by-attributes">&nbsp;Timeline</i>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to friends_path(session[:user_id])  do %>
+          <i class="glyphicon glyphicon-th-large">&nbsp;Friends</i>
+          <% end %>
+        </li>
+
       <% else %>
           <li><%= link_to 'Log In',    login_url    %></li>
         </ul>        
       <% end %>
 
-    </div>
+    </div> 
 
     <div id="main" style="margin-top:50px;margin-bottom:20px" class="col-md-8 col-sm-7 col-sm-offset-3 col-md-offset-2">
       <%= yield %>
