--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -1,9 +1,17 @@
-<h1>Discover music</h1>
-<br />
-<button class="btn btn-default"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><%= link_to 'New Music', new_music_path %></button>
+
+<div class="row">
+<div class="col-md-8"><h1>Discover music</h1></div>
+<!-- <button class="btn btn-default"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><%= link_to 'New Music', new_music_path %></button> -->
+
+<div class="col-md-2"><%= link_to 'New Music', new_music_path, remote: true, class: "btn btn-primary" %></div>
+<div class="col-md-2"><%= link_to 'New Audio', new_music_path, remote: true, class: "btn btn-default" %></div>
+</div>
+
+<div id="music-form" style="display:none;"></div> 
+<br>
 
 <div >
-<br />  
+
 <table class="table table-striped">
 <% @musics.each do |music| %>
   
