--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -28,6 +28,21 @@
         </li>
         <li> <%= music.comment %> </li>
         <li> <p><iframe frameborder="no" border="0" width=320 height=90 src="<%= music.link %>"></iframe></p></li>
+        <li>
+           <%= link_to 'Add Comment', new_comment_path(:post_id => music.id)%>
+             <% music.comments.each do |comment| %>
+            
+            <td>
+            <%= comment.content %>  
+            </td>
+            
+            <% end %>  
+        </li>
+        <li>
+          <%= link_to 'Like', new_like_path(:post_id => music.id)%>
+            <%= music.likecount %>  
+        </li>
+
         <li style="color:grey"><%= music.created_at %></li>
       </ul>
     </td>
