--- a/app/views/users/mytimeline.html.erb
+++ b/app/views/users/mytimeline.html.erb
@@ -30,6 +30,14 @@
             <dt><%= music.comment %>        
             <dd><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=340 height=90  src="<%= music.link %>"></iframe></dd>
             <dd style="color:grey"><%= music.created_at %></dd> 
+            <%= link_to 'Add Comment', new_comment_path(:post_id => music.id)%>
+             <% music.comments.each do |comment| %>
+            <td>
+            <%= comment.content %>  
+            </td>
+            <% end %>  
+            <%= link_to 'Like', new_like_path(:post_id => music.id)%>
+            <%= music.likecount %>  
           </dl>
         </td>
         <td class="list_actions">
