--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -29,19 +29,20 @@
         <li> <%= music.comment %> </li>
         <li> <p><iframe frameborder="no" border="0" width=320 height=90 src="<%= music.link %>"></iframe></p></li>
         <li>
-           <%= link_to 'Add Comment', new_comment_path(:post_id => music.id)%>
+            <%= link_to 'Add Comment', new_comment_path(:post_id => music.id)%>
+            <%= link_to 'Like', new_like_path(:post_id => music.id)%>
+            <%= music.likecount %>
+           <table>
              <% music.comments.each do |comment| %>
-            
-            <td>
-            <%= comment.content %>  
-            </td>
-            
-            <% end %>  
+              <tr>
+                <td>
+                <%= comment.content %>  
+                </td>
+              </tr>
+              <% end %>  
+            </table>
         </li>
-        <li>
-          <%= link_to 'Like', new_like_path(:post_id => music.id)%>
-            <%= music.likecount %>  
-        </li>
+
 
         <li style="color:grey"><%= music.created_at %></li>
       </ul>
