--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,16 +11,21 @@
     </div>
   <% end %>
 
-  <div class="field">
-  <br>
-    <%= f.text_area :content %>
-  </div>
+
 
   <div class="field">
+    <label class="sr-only">Comment:</label>
+    <%= f.text_area :content,rows:4, placeholder: 'Say something to your friends...', :class => "form-control" %>
+  </div>
+
+  <br>
+   <div class="field">
     <%= f.hidden_field :post_id, :value => params[:post_id]%>
   </div>
 
+  <br>
   <div class="actions">
-    <%= f.submit "Comment", :class => "btn btn-submit"%>
+    <%= f.submit "Submit", :class => 'btn btn-primary'%>
   </div>
+
 <% end %>
