--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -39,7 +39,7 @@
              <% music.comments.each do |comment| %>
               <tr>
                 <td>
-                <%= music.user.name %> :
+                <%= comment.user.name%> :
                 <%= comment.content %>  
                 </td>
               </tr>
