revise comment_user

--- a/app/views/users/mytimeline.html.erb
+++ b/app/views/users/mytimeline.html.erb
@@ -40,7 +40,7 @@
             <% music.comments.each do |comment| %>
             <tr>
               <td>
-                <%= comment.user_id %> :
+                <%= comment.user.name %> :
                 <%= comment.content %> 
               </td>
             </tr>
