--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -4,7 +4,7 @@
 <!-- <button class="btn btn-default"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span><%= link_to 'New Music', new_music_path %></button> -->
 
 <div class="col-md-2"><%= link_to 'New Music', new_music_path, remote: true, class: "btn btn-primary" %></div>
-<div class="col-md-2"><%= link_to 'New Audio', new_music_path, remote: true, class: "btn btn-default" %></div>
+<div class="col-md-2"><%= link_to 'See audios', audios_path, class: "btn btn-default" %></div>
 </div>
 
 <div id="music-form" style="display:none;"></div> 
