--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,12 +36,19 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li><a href=<%=home_url%>>Home</a></li>
-              <li><a href="#">Search</a></li>
+              <li><a href=<%=search_url%>>Search</a></li>
               <li><a href="#">Contact</a></li>
+
             </ul>
             <% if session[:user_id] %>
               <ul class="nav navbar-nav navbar-right">
-                <li><%= link_to 'Logout', logout_path, method: :delete, class: "btn btn-default"   %></li>
+<!--                 <li>
+                <%= form_tag(users_path, :method => 'get', :id => 'users_search') do %>
+                  <%= text_field_tag :search, params[:search] %>
+                  <%= submit_tag "Search", :name => nil %>
+                <% end %>
+                </li> -->
+                <li height><%= link_to 'Logout', logout_path, method: :delete, class: "btn btn-default"  %></li>
               </ul>
             <% else %> 
               <ul class="nav navbar-nav navbar-right">
