--- a/app/views/users/mytimeline.html.erb
+++ b/app/views/users/mytimeline.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to 'Back', :back %>
+
 <div class="middle-page">
   <div>
   <%= image_tag(@user.image.url(:small), :class => "profile-img") %> 
@@ -33,9 +35,11 @@
           </dl>
         </td>
         <td class="list_actions">
-      <%= link_to 'Delete', music, method: :delete,
-                  data: { confirm: 'Are you sure?' } %>
-    </td>
+          <% if @user == @current_user %>
+            <%= link_to 'Delete', music, method: :delete,
+                        data: { confirm: 'Are you sure?' } %>
+          <% end %>
+        </td>
 
       </tr>
     <% end %>
