--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -51,7 +51,9 @@
 </div>
 
 <div class="middle-page">
+<% if @current_user == @user %>
 <%= link_to 'Edit', edit_user_path(@user) %> |
+<% end %>
 <%= link_to 'Back', :back %>
 
 </div>
